--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>TikTok Video Viewer with Location Simulation</title>
-  <meta name="tiktok-site-verification" content="oqeJHkAVmgRoQk8skDpJB7eZ12gbrOt0">
+  <meta name="tiktok-developers-site-verification=oqeJHkAVmgRoQk8skDpJB7eZ12gbrOt0">
   <style>
     body {
       font-family: Arial, sans-serif;
